changed margin since its broken on mobile

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -139,9 +139,9 @@ img{
 }
 
 .social-links a{
-    margin: 0 0.5em;
+    margin: 0 10%;
     padding: 10px;
-    width: 20vw;
+    width: 20%;
     aspect-ratio: 1;
     flex-wrap: wrap;
     outline: 1px solid white;
