--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -140,14 +140,13 @@ img{
 
 .social-links{
     width: 80%;
+    align-items: center;
     justify-content: space-around;
-
+    flex-wrap: wrap;
 }
 
 .social-links a{
     margin: 0 0.5em;
-    padding: 10px;
-    width: 20%;
     
     flex-wrap: wrap;
     outline: 1px solid white;
@@ -155,10 +154,10 @@ img{
 }
 
 .social-links .fa {
-    width: 100%;
-    height: 100%;
+    padding: 1.5em;
     text-align: center;
-    font-size: 3em;
+    font-size: 1em;
+    padding: 1em;
 } 
 
 .social-links .fa-github{
