--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -156,8 +156,8 @@ img{
 .social-links .fa {
     padding: 0.3em;
     text-align: center;
-    font-size: 3em;
-    text-decoration: none;;
+    font-size: 2em;
+    text-decoration: none;
 } 
 
 .social-links .fa-github{
