--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -154,8 +154,11 @@ img{
     
     flex-wrap: wrap;
     /* outline: 1px solid white; */
-    border-radius: var(--border-radius);
-}
+    border-top-left-radius: var(--border-radius);
+    border-top-right-radius: var(--border-radius);
+    border-bottom-left-radius: var(--border-radius);
+    border-bottom-right-radius: var(--border-radius);
+    }
 
 .social-links .fa {
     padding: 0.3em;
