--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -44,7 +44,7 @@ body {
     margin:0;
     padding: 0;
     line-height: 1.6;
-    font-family: sans-serif;
+    font-family: Arial;
 }
 
 img{
@@ -75,6 +75,8 @@ img{
 
 /* classes */
 
+
+/* welcome section */
 .welcome-section {
     height: 100vh;
     justify-content: center;
@@ -84,6 +86,8 @@ img{
     object-fit: contain;
     color: white;
 }
+
+/* projects section */
 
 .projects {
     flex-direction: column;
@@ -129,6 +133,13 @@ img{
     overflow: hidden;
 }
 
+/* tech section */
+.tech-skills{
+    color: white;
+    background-color: black;
+}
+
+/* contacts section */
 .contacts{
     height: 50vh;
     background-color: var(--clr-accent);
