--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,13 +87,30 @@ img{
     color: white;
     opacity: 1;
     animation: opacity 1s ease-in-out;
+    -webkit-animation: opacity 1s ease-in-out;
 }
 
 .welcome-section h1{
     font-size: var(--fs-500);
     text-align: center;
     animation: text-slide-in 2s;
-    
+    -webkit-animation: text-slide-in 2s;
+}
+
+@-webkit-keyframes text-slide-in {
+    0%{
+        opacity: 0;
+        
+    }
+
+    66%{
+        opacity: 0;
+        transform: translateY(-50px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateY(0px);
+    }
 }
 
 @keyframes text-slide-in {
@@ -113,6 +130,16 @@ img{
 }
 
 @keyframes opacity {
+    0%{
+        opacity: 0;
+    }
+
+    100%{
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes opacity {
     0%{
         opacity: 0;
     }
@@ -179,6 +206,10 @@ img{
 
 @media (min-width: 35em) {
     
+.projects h2{
+    font-size: 2em
+}
+
     .project-container{
         flex-direction: row;
         justify-content: center;
@@ -250,8 +281,12 @@ img{
 }
 
 @media (min-width: 35em) {
+
+    .skills h2{
+        font-size: var(--fs-400);
+    }
     .skills-container{
-        font-size: 3em;
+        font-size: clamp(2em, 5vw + 1rem, 5em);
     }
 }
 
@@ -343,6 +378,12 @@ img{
     animation: phone-ringing 1s ease-in-out;
 }
 
+@media (min-width: 35em) {
+    .social-links .fa{
+        font-size: 3em;
+    }
+    
+}
 @keyframes phone-ringing{
     0%{
         transform: rotate(0deg);
