--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -40,6 +40,10 @@ p {
     margin: 0;
 }
 
+embed {
+    display: block;
+}
+
 body {
     margin:0;
     padding: 0;
@@ -79,6 +83,7 @@ img{
 /* welcome section */
 .welcome-section {
     height: 100vh;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     background: radial-gradient(circle, #e66465 44%, #ff9c9c 58%,  #111 60%);
@@ -93,11 +98,41 @@ img{
 .welcome-section h1{
     font-size: var(--fs-500);
     text-align: center;
-    animation: text-slide-in 2s;
-    -webkit-animation: text-slide-in 2s;
+    animation: slide-in-top 2s;
+    -webkit-animation: slide-in-top 2s;
+    -moz-animation: slide-in-top 2s;
+    -o-animation: slide-in-top 2s;
 }
 
-@-webkit-keyframes text-slide-in {
+#resume-button{
+    text-decoration: none;
+    color: white;
+    background-color: hsl(212, 88%, 22%);
+    margin-top: 1em;
+    padding: 0.5em;
+    border-radius: 0.5em;
+    box-shadow: 0px 0px 10px hsl(0 0% 0% / 0.7);
+
+    transition: box-shadow 200ms ease-in,
+                background-color 200ms ease-in;
+
+    animation: slide-in-top 3s ease-in-out;
+    -webkit-animation: slide-in-top 3s ease-in-out;
+    -moz-animation: slide-in-top 3s ease-in-out;
+    -o-animation: slide-in-top 3s ease-in-out;
+}
+
+#resume-button a{
+    text-decoration: none;
+    color: white;
+}
+
+#resume-button:hover {
+    background-color: hsl(212, 88%, 40%);
+    box-shadow: 0px 0px 10px hsl(0 0% 0% / 0.9);
+}
+
+@-webkit-keyframes slide-in-top {
     0%{
         opacity: 0;
         
@@ -113,7 +148,7 @@ img{
     }
 }
 
-@keyframes text-slide-in {
+@keyframes slide-in-top {
     0%{
         opacity: 0;
         
@@ -149,6 +184,18 @@ img{
     }
 }
 
+/* About Me */
+    .about-me {
+        padding: 1em 3em;
+        font-size: 1em;
+        background-color: ivory;
+        height: 100%;
+    }
+
+@media (min-width: 35em) {
+    .about-me{ font-size: 1.5em; }
+}
+
 /* projects section */
 
 .projects {
@@ -180,11 +227,48 @@ img{
 
 .project-card-animation{
     animation: card-fade-in 1s ease-in-out 1 forwards;
+    -o-animation: card-fade-in 1s ease-in-out 1 forwards;
+    -webkit-animation: card-fade-in 1s ease-in-out 1 forwards;
+    -moz-animation: card-fade-in 1s ease-in-out 1 forwards;
+
     opacity: 1;
     transform: scale(1);
 }
 
 @keyframes card-fade-in {
+    from{
+        transform: scale(var(--scale-size));
+        opacity: 0.3;
+    }
+    to{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes card-fade-in {
+    from{
+        transform: scale(var(--scale-size));
+        opacity: 0.3;
+    }
+    to{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@-moz-keyframes card-fade-in {
+    from{
+        transform: scale(var(--scale-size));
+        opacity: 0.3;
+    }
+    to{
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
+@-o-keyframes card-fade-in {
     from{
         transform: scale(var(--scale-size));
         opacity: 0.3;
@@ -219,14 +303,23 @@ img{
     align-items: center;
     min-height: 100px;
     background-color: var(--clr-dark);
-    
+    position: relative;
+    z-index: 1;
 }
 
-#caution-tape{
-    border: 1px solid yellow;
-    
+.in-progress-container::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    top: 0;
+    height: 100%;
     width: 300%;
-    height: 30px;
+    z-index: -1;
+    animation: left-to-right 8s ease-in-out alternate infinite;
+    opacity: 0.7;
+
     background: linear-gradient(45deg,  black 0%, black 10%,
                                         yellow 10%, yellow 20%,
                                         black 20%, black 30%,
@@ -238,28 +331,29 @@ img{
                                         black 80%, black 90%,
                                         yellow 90%, yellow 100%
     );
-    
-    animation: left-to-right 10s linear infinite;
 }
 
 @keyframes left-to-right {
     0% {
-        transform: translateX(-100%);
+        transform: translateX(-50%);
     }
     100%{
-        transform: translateX(100%);
+        transform: translateX(-40%);
     }
 }
 
 #tape-text{
+    height: 100%;
+    
+    
     text-align: center;
     font-weight: bold;
-    color: black;
-    
-    text-shadow: -1px 1px white,
-                1px 1px white,
-                1px -1px white,
-                -1px -1px white;
+    color: white;
+    font-size: 1.5em;
+    text-shadow: -1px 1px black,
+                1px 1px black,
+                1px -1px black,
+                -1px -1px black;
 }
 
 
